--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
 	// for more information about repositories.
 }
 
+repositories {
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/" }
+}
+
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -27,6 +32,14 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
+	modApi("me.shedaniel.cloth:cloth-config-fabric:5.0.38") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+
+	// Modmenu
+	modCompileOnly modRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}"),{
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
 }
