--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 repositories {
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.terraformersmc.com/" }
+	maven {
+		name = "BuildCraft"
+		url = "https://mod-buildcraft.com/maven"
+	}
 }
 
 dependencies {
@@ -40,6 +44,11 @@ dependencies {
 	modCompileOnly modRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}"),{
 		exclude(group: "net.fabricmc.fabric-api")
 	}
+
+	modCompile "alexiil.mc.lib:libblockattributes-core:0.9.0"
+	modCompile "alexiil.mc.lib:libblockattributes-items:0.9.0"
+	modCompile "alexiil.mc.lib:libblockattributes-fluids:0.9.0"
+
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
 }
