--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
 	minecraft_version=1.17.1
 	yarn_mappings=1.17.1+build.39
-	loader_version=0.11.6
+	loader_version=0.11.7
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = tk.dczippl
+	archives_base_name = lightest-lamps-fabric
 
 # Dependencies
-	fabric_version=0.39.2+1.17
+	fabric_version=0.40.1+1.17
 	mod_menu_version=2.0.4
+	fluidity_version=0.16.224
