--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ repositories {
 		url = 'https://ladysnake.jfrog.io/artifactory/mods'
 	}
 	maven { url "https://maven.shedaniel.me/" }
+	maven {
+		name = "Modmuss50"
+		url = "https://maven.modmuss50.me/"
+	}
 }
 
 dependencies {
@@ -61,21 +65,7 @@ dependencies {
 	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:6.0.279-alpha"
 	modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:6.0.279-alpha"
 
-	/*// optional dev env annotation support
-	compileOnly "org.apiguardian:apiguardian-api:1.0.0"
-	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-
-	// Replace modImplementation with modApi if you expose components in your own API
-	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:3.1.1"
-	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-util:3.1.1"
-	modImplementation "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:3.1.1"
-	// Includes Cardinal Components API as a Jar-in-Jar dependency (optional)
-	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:3.1.1"
-	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-util:3.1.1"
-	include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:3.1.1"
-
-	modImplementation ("grondag:fluidity-mc117:${project.fluidity_version}") { transitive = false }
-	include "grondag:fluidity-mc117:${project.fluidity_version}"*/
+	include modApi('teamreborn:energy:0.1.1')
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
