--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,7 @@ org.gradle.jvmargs=-Xmx4G
 # Dependencies
 	fabric_version=0.40.1+1.17
 	mod_menu_version=2.0.4
-	fluidity_version=0.16.224
+	# https://modmaven.dev/RebornCore/RebornCore-1.17/
+	RebornCore_version=5.0.8-beta+build.114
+	# https://modmaven.dev/TechReborn/TechReborn-1.17/
+	TechReborn_version=5.0.8-beta+build.114
