--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.39
-	loader_version=0.11.7
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.22
+	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 0.9.6
+	mod_version = 1.0.0-pre
 	maven_group = tk.dczippl
 	archives_base_name = lightest-lamps-fabric
 
 # Dependencies
-	fabric_version=0.40.1+1.17
-	mod_menu_version=2.0.4
-	# https://modmaven.dev/RebornCore/RebornCore-1.17/
-	RebornCore_version=5.0.8-beta+build.114
-	# https://modmaven.dev/TechReborn/TechReborn-1.17/
-	TechReborn_version=5.0.8-beta+build.114
+	fabric_version=0.46.4+1.18
+	mod_menu_version=3.0.1
+	# https://modmaven.dev/RebornCore/RebornCore-1.18/
+	RebornCore_version=5.1.0-beta.9
+	# https://modmaven.dev/TechReborn/TechReborn-1.18/
+	TechReborn_version=5.1.0-beta.9
