--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -49,11 +49,7 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation("alexiil.mc.lib:libblockattributes-core:0.9.0")
-	//modImplementation("alexiil.mc.lib:libblockattributes-items:0.9.0")
-	modImplementation("alexiil.mc.lib:libblockattributes-fluids:0.9.0")
-
-	modApi("me.shedaniel.cloth:cloth-config-fabric:5.0.38") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:6.1.48") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
@@ -62,12 +58,12 @@ dependencies {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:6.0.279-alpha"
-	modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:6.0.279-alpha"
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:7.2.418"
+	modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:7.2.418"
 
-	modImplementation("RebornCore:RebornCore-1.17:${project.RebornCore_version}")
-	modRuntime("TechReborn:TechReborn-1.17:${project.TechReborn_version}")
-	include modApi('teamreborn:energy:2.0.0-beta1')
+	modImplementation("RebornCore:RebornCore-1.18:${project.RebornCore_version}")
+	modRuntime("TechReborn:TechReborn-1.18:${project.TechReborn_version}")
+	include modApi('teamreborn:energy:2.2.0')
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
