--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx4G
 	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 1.0.0-pre
+	mod_version = 1.0.0-beta
 	maven_group = tk.dczippl
 	archives_base_name = lightest-lamps-fabric
 
