--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'fabric-loom' version '0.11-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -49,24 +49,31 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modApi("me.shedaniel.cloth:cloth-config-fabric:6.1.48") {
-		exclude(group: "net.fabricmc.fabric-api")
-	}
+	optionalDependency("me.shedaniel.cloth:cloth-config-fabric:6.2.57")
 
 	// Modmenu
-	modCompileOnly modRuntime("com.terraformersmc:modmenu:${project.mod_menu_version}"),{
-		exclude(group: "net.fabricmc.fabric-api")
-	}
+	optionalDependency "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:7.2.418"
-	modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:7.2.418"
+	optionalDependency "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+	//modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
 
-	modImplementation("RebornCore:RebornCore-1.18:${project.RebornCore_version}")
-	modRuntime("TechReborn:TechReborn-1.18:${project.TechReborn_version}")
+	//optionalDependency ("RebornCore:RebornCore-1.18:${project.RebornCore_version}")
+	//modLocalRuntime ("TechReborn:TechReborn-1.18:${project.TechReborn_version}")
 	include modApi('teamreborn:energy:2.2.0')
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
+}
+
+def optionalDependency(String dep) {
+	dependencies.modLocalRuntime (dep) {
+		exclude group: "net.fabricmc.fabric-api"
+		exclude module: "nbt-crafting"
+	}
+	dependencies.modCompileOnly (dep) {
+		exclude group: "net.fabricmc.fabric-api"
+		exclude module: "nbt-crafting"
+	}
 }
 
 processResources {
