--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,20 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.1
-	yarn_mappings=1.18.1+build.22
-	loader_version=0.12.12
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.2
+	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.0-beta
+	mod_version = 1.0.0
 	maven_group = tk.dczippl
 	archives_base_name = lightest-lamps-fabric
 
 # Dependencies
-	fabric_version=0.46.4+1.18
+	fabric_version=0.48.0+1.18.2
 	mod_menu_version=3.0.1
+	rei_version=8.0.442
 	# https://modmaven.dev/RebornCore/RebornCore-1.18/
-	RebornCore_version=5.1.0-beta.9
+	RebornCore_version=5.2.0-beta.2
 	# https://modmaven.dev/TechReborn/TechReborn-1.18/
-	TechReborn_version=5.1.0-beta.9
+	TechReborn_version=5.2.0-beta.2
