--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,11 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'org.quiltmc.loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
-
-archivesBaseName = project.archives_base_name
-version = project.mod_version
-group = project.maven_group
-
-repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-}
+group = maven_group
+version = project.version
+archivesBaseName = archives_base_name
 
 repositories {
 	maven { url "https://maven.shedaniel.me/" }
@@ -42,91 +31,77 @@ repositories {
 
 dependencies {
 	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "com.mojang:minecraft:$minecraft_version"
+	mappings( loom.layered {
+		addLayer quiltMappings.mappings( "org.quiltmc:quilt-mappings:$minecraft_version+build.$quilt_mappings:v2" )
+//		addLayer loom.officialMojangMappings() // uncomment if you want mojmap too
+	})
+	modImplementation "org.quiltmc:quilt-loader:$loader_version"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "org.quiltmc:qsl:$qsl_version"
 
-	optionalDependency("me.shedaniel.cloth:cloth-config-fabric:6.2.57")
+	// QSL is not a complete API; you need Quilted Fabric API to fill in the gaps.
+	modImplementation "org.quiltmc.quilted-fabric-api:quilted-fabric-api:$quilted_fapi_version-$minecraft_version"
+
+	modImplementation ("me.shedaniel.cloth:cloth-config-fabric:6.2.57")
 
 	// Modmenu
-	optionalDependency "com.terraformersmc:modmenu:${project.mod_menu_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
 
-	optionalDependency "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
+	modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
 	//modRuntime "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
 
 	//optionalDependency ("RebornCore:RebornCore-1.18:${project.RebornCore_version}")
 	//modLocalRuntime ("TechReborn:TechReborn-1.18:${project.TechReborn_version}")
 	include modApi('teamreborn:energy:2.2.0')
-
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
-}
-
-def optionalDependency(String dep) {
-	dependencies.modLocalRuntime (dep) {
-		exclude group: "net.fabricmc.fabric-api"
-		exclude module: "nbt-crafting"
-	}
-	dependencies.modCompileOnly (dep) {
-		exclude group: "net.fabricmc.fabric-api"
-		exclude module: "nbt-crafting"
-	}
 }
 
 processResources {
-	inputs.property "version", project.version
+	inputs.property 'version', version
+	inputs.property 'maven_group', maven_group
+	inputs.property 'loader_version', loader_version
+	inputs.property 'minecraft_version', minecraft_version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching('quilt.mod.json') {
+		expand([
+			'version': version,
+			'maven_group': maven_group,
+			'loader_version': loader_version,
+			'minecraft_version': minecraft_version,
+			'quilted_fabric_api_version': quilted_fapi_version
+		])
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// ensure that the encoding is set to UTF-8, no matter what the system default is
-	// this fixes some edge cases with special characters not displaying correctly
-	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-	// If Javadoc is generated, this must be specified in that task too.
-	it.options.encoding = "UTF-8"
-
-	// Minecraft 1.17 (21w19a) upwards uses Java 16.
-	it.options.release = 16
+	it.sourceCompatibility = 17 // for the IDE support
+	it.options.encoding = 'UTF-8'
+	it.options.release.set(17)
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
+	// if this mod is gonna be a library, its better to generate javadocs too, uncomment this line to generate them
+	//withJavadocJar()
+	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
 jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
+	from('LICENSE') {
+		rename { "$it_$archivesBaseName"}
 	}
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+			group 'com.examplemod'
+			from components.java
 		}
 	}
 
-	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+		 mavenLocal()
 	}
 }
