--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,22 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.2
-	loader_version=0.13.3
-
+# gradle stuff
+    org.gradle.jvmargs=-Xmx3G
+    org.gradle.parallel=true
+    org.gradle.caching=true
+    # uncomment this is gradle doesn't want to use more workers
+    #org.gradle.workers.max=4
+# Quilt Properties
+    # check these on https://lambdaurora.dev/tools/import_quilt.html
+    minecraft_version=1.18.2
+    quilt_mappings=22
+    loader_version=0.16.0-beta.7
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = tk.dczippl
 	archives_base_name = lightest-lamps-fabric
-
 # Dependencies
-	fabric_version=0.48.0+1.18.2
+    qsl_version=1.1.0-beta.2+1.18.2
+    quilted_fapi_version=1.0.0-beta.5+0.48.0
+
 	mod_menu_version=3.0.1
 	rei_version=8.0.442
 	# https://modmaven.dev/RebornCore/RebornCore-1.18/
