Port mod to Quilt 1.18.2

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,14 @@
 pluginManagement {
 	repositories {
-		maven { url 'https://maven.fabricmc.net' }
-		maven { url 'https://maven.quiltmc.org/repository/release' }
-		maven { url 'https://maven.quiltmc.org/repository/snapshot' }
+		maven {
+			name = 'Quilt'
+			url = 'https://maven.quiltmc.org/repository/release'
+		}
+		// Currently needed for Intermediary and other temporary dependencies
+		maven {
+			name = 'Fabric'
+			url = 'https://maven.fabricmc.net/'
+		}
 		gradlePluginPortal()
-		mavenCentral()
 	}
 }
