--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'maven-publish'
 	alias(libs.plugins.quilt.loom)
+	id "com.modrinth.minotaur" version "2.+"
 }
 
 archivesBaseName = project.archives_base_name
@@ -31,6 +32,10 @@ repositories {
 		name = "Modmuss50"
 		url = "https://maven.modmuss50.me/"
 	}
+	maven {
+		name = "Techreborn"
+		url = "maven.fabricmc.net"
+	}
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
@@ -50,6 +55,8 @@ dependencies {
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:6.2.57")
 	modImplementation "com.terraformersmc:modmenu:3.2.3"
 	modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:8.2.471"
+	modImplementation "TechReborn:TechReborn-${project.tech_reborn}"
+	include(modApi("teamreborn:energy:${project.energy_version}"))
 }
 
 processResources {
@@ -101,5 +108,22 @@ publishing {
 		// Notice: This block does NOT have the same function as the block in the top level.
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
+	}
+}
+
+modrinth {
+	token = System.getenv("MODRINTH_TOKEN") // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
+	projectId = "lightest-lamps" // This can be the project ID or the slug. Either will work!
+	versionNumber = project.version // You don't need to set this manually. Will fail if Modrinth has this version already
+	versionType = "release" // This is the default -- can also be `beta` or `alpha`
+	uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
+	gameVersions = ["1.18.2"] // Must be an array, even with only one version
+	loaders = ["quilt"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
+	dependencies { // A special DSL for creating dependencies
+		// scope.type
+		// The scope can be `required`, `optional`, `incompatible`, or `embedded`
+		// The type can either be `project` or `version`
+		required.project "cloth-config" // Creates a new required dependency on Fabric API
+		required.project "qsl" // Creates a new required dependency on Fabric API
 	}
 }
