--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,10 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 1.0.0+1.18.2
+version = 2.0.0
 maven_group = tk.dczippl.lightestlamp
 archives_base_name = lightestlamp
 
 # Dependencies are managed at gradle/libs.versions.toml
+tech_reborn = 1.18:5.2.0
+energy_version = 2.2.0
