--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,13 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 2.0.0
+version = 3.0.0+1.19
 maven_group = tk.dczippl.lightestlamp
 archives_base_name = lightestlamp
 
 # Dependencies are managed at gradle/libs.versions.toml
-tech_reborn = 1.18:5.2.0
+tech_reborn = 1.19:5.3.3
 energy_version = 2.2.0
+mod_menu=4.0.6
+cloth_config=8.0.75
+rei=9.1.530
