--- a/build.gradle
+++ b/build.gradle
@@ -116,7 +116,7 @@ modrinth {
 	projectId = "lightest-lamps" // This can be the project ID or the slug. Either will work!
 	versionNumber = project.version // You don't need to set this manually. Will fail if Modrinth has this version already
 	versionType = "release" // This is the default -- can also be `beta` or `alpha`
-	uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
+	uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
 	gameVersions = ["1.18.2"] // Must be an array, even with only one version
 	loaders = ["quilt"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
 	dependencies { // A special DSL for creating dependencies
