--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 	// Quilted Fabric API will automatically pull in the correct QSL version.
 	modImplementation libs.quilted.fabric.api
 
+	modApi("dev.architectury:architectury-fabric:${rootProject.architectury_version}") // Fix refmap crash
+
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config}")
 	modImplementation "com.terraformersmc:modmenu:${project.mod_menu}"
 	modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei}"
