--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ energy_version = 2.2.0
 mod_menu=4.0.6
 cloth_config=8.0.75
 rei=9.1.530
+# Fix "Using refmap architectury-fabric-refmap.json" error
+architectury_version=6.2.43
