--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'fabric-loom' version '1.0-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -50,6 +50,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	optionalDependency("me.shedaniel.cloth:cloth-config-fabric:6.2.57")
+
+	modApi("dev.architectury:architectury-fabric:${rootProject.architectury_version}") // Fix refmap crash
 
 	// Modmenu
 	optionalDependency "com.terraformersmc:modmenu:${project.mod_menu_version}"
