--- a/gradle.properties
+++ b/gradle.properties
@@ -2,21 +2,22 @@
 org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.2
-	loader_version=0.13.3
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.8
+	loader_version=0.14.9
+
+	#Fabric api
+	fabric_version=0.60.0+1.19.2
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 3.0.0f
 	maven_group = tk.dczippl
 	archives_base_name = lightest-lamps-fabric
 
 # Dependencies
-	fabric_version=0.48.0+1.18.2
-	mod_menu_version=3.0.1
-	rei_version=8.0.442
-	# https://modmaven.dev/RebornCore/RebornCore-1.18/
-	RebornCore_version=5.2.0-beta.2
+	mod_menu_version=4.0.6
+	rei_version=9.1.530
 	# https://modmaven.dev/TechReborn/TechReborn-1.18/
-	TechReborn_version=5.2.0-beta.2
+	TechReborn_version=5.3.4
+	# Fix "Using refmap architectury-fabric-refmap.json" error
+	architectury_version=6.2.43
