--- a/gradle.properties
+++ b/gradle.properties
@@ -2,22 +2,22 @@
 org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.8
-	loader_version=0.14.9
+	minecraft_version=1.20
+	yarn_mappings=1.20+build.1
+	loader_version=0.14.21
 
 	#Fabric api
-	fabric_version=0.60.0+1.19.2
+	fabric_version=0.83.0+1.20
 
 # Mod Properties
-	mod_version = 3.0.0f
+	mod_version = 4.0.0
 	maven_group = tk.dczippl
 	archives_base_name = lightest-lamps-fabric
 
 # Dependencies
-	mod_menu_version=4.0.6
-	rei_version=9.1.530
+	mod_menu_version=7.0.1
+	rei_version=12.0.613
 	# https://modmaven.dev/TechReborn/TechReborn-1.18/
-	TechReborn_version=5.3.4
+	TechReborn_version=5.8.0
 	# Fix "Using refmap architectury-fabric-refmap.json" error
-	architectury_version=6.2.43
+	architectury_version=9.0.6
