--- a/build.gradle
+++ b/build.gradle
@@ -137,9 +137,9 @@ modrinth {
 	token = System.getenv("MODRINTH_TOKEN") // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
 	projectId = "lightest-lamps" // This can be the project ID or the slug. Either will work!
 	versionNumber = project.version // You don't need to set this manually. Will fail if Modrinth has this version already
-	versionType = "release" // This is the default -- can also be `beta` or `alpha`
+	versionType = "beta" // `release` is the default -- can also be `beta` or `alpha`
 	uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-	gameVersions = ["1.20", "1.19", "1.19.1", "1.19.2"] // Must be an array, even with only one version
+	gameVersions = ["1.20"] // Must be an array, even with only one version
 	loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
 	dependencies { // A special DSL for creating dependencies
 		// scope.type
