--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@ org.gradle.jvmargs=-Xmx4G
 # Dependencies
 	mod_menu_version=7.0.1
 	rei_version=12.0.625
+	energy_version=2.2.0
+	cloth_config_version=11.0.99
 	# https://modmaven.dev/TechReborn/TechReborn-1.18/
 	TechReborn_version=5.8.1
 	# Fix "Using refmap architectury-fabric-refmap.json" error
