--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
+org.gradle.parallel=true
 
 # Fabric Properties
 	minecraft_version=1.20.1
@@ -10,16 +11,16 @@ org.gradle.jvmargs=-Xmx4G
 	fabric_version=0.87.0+1.20.1
 
 # Mod Properties
-	mod_version = 4.0.2
+	mod_version = 4.1.0
 	maven_group = dev.prefex
 	archives_base_name = lightest-lamps-fabric
 
 # Dependencies
-	mod_menu_version=7.0.1
-	rei_version=12.0.625
+	mod_menu_version=7.2.1
+	rei_version=12.0.645
 	energy_version=2.2.0
-	cloth_config_version=11.0.99
+	cloth_config_version=11.1.106
 	# https://modmaven.dev/TechReborn/TechReborn-1.18/
-	TechReborn_version=5.8.1
+	TechReborn_version=5.8.7
 	# Fix "Using refmap architectury-fabric-refmap.json" error
-	architectury_version=9.0.8
+	architectury_version=9.1.12
