Add data generation. Fix netherite mesh recipe

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ org.gradle.parallel=true
 	mod_version = 4.1.0
 	maven_group = dev.prefex
 	archives_base_name = lightest-lamps-fabric
+	modid = lightestlamp
 
 # Dependencies
 	mod_menu_version=7.2.1
