--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ org.gradle.parallel=true
 	TechReborn_version=5.8.7
 	# Fix "Using refmap architectury-fabric-refmap.json" error
 	architectury_version=9.1.12
+	magna_version=1.8.1-1.19
