Update fabric version to 1.20.2 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 # Fabric Properties
-	minecraft_version=1.20.2-rc2
-	yarn_mappings=1.20.2-rc2+build.4
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.1
 	loader_version=0.14.22
 
 	#Fabric api
-	fabric_version=0.89.0+1.20.2
+	fabric_version=0.89.2+1.20.2
 
 # Mod Properties
-	mod_version = 4.1.1
+	mod_version = 4.2.0
 	maven_group = dev.prefex
 	archives_base_name = lightest-lamps-fabric
 	modid = lightestlamp
