Update deps to 1.20.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,11 +17,11 @@ org.gradle.parallel=true
 	modid = lightestlamp
 
 # Dependencies
-	mod_menu_version=7.2.1
-	rei_version=12.0.645
+	mod_menu_version=8.0.0-beta.2
+	rei_version=13.0.655
 	energy_version=2.2.0
-	cloth_config_version=11.1.106
+	cloth_config_version=12.0.109
 	# https://modmaven.dev/TechReborn/TechReborn-1.18/
-	TechReborn_version=5.8.7
+	TechReborn_version=5.9.0
 	# Fix "Using refmap architectury-fabric-refmap.json" error
-	architectury_version=9.1.12
+	architectury_version=10.0.7
